--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cse340": "file:",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "pg": "8.16.3"
   },
   "devDependencies": {
