--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "cse340": "file:",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
-    "pg": "8.16.3"
+    "jwks-rsa": "^3.1.0",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
