--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "pg": "^8.13.0"
   },
